bump 4.0.0-rc7 z-index fix

--- a/src/bedriftsmeny/Virksomhetsvelger/Virksomhetsvelger.less
+++ b/src/bedriftsmeny/Virksomhetsvelger/Virksomhetsvelger.less
@@ -5,8 +5,10 @@
 @dropdownElemHeightMobile: 25rem;
 @dropdownElemHeightDesktop: 30rem;
 
+#virksomhetsvelger__dropdown {
+    z-index: 1;
+}
 .virksomhetsvelger {
-    z-index: 10;
     color: @navMorkGra;
 
     &__dropdown {
@@ -24,7 +26,6 @@
             visibility: hidden;
             transform: rotateX(-90deg);
             transform-origin: top center;
-            z-index: 20;
             opacity: 0.3;
 
             .dropdownmeny-elementer-wrapper {
